Fix scrollbar, navbar work-links, ms-overflow
Last edit to scrollbar gutter works on mobile chrome browser.
Added overflow-style for IE and Edge.

Added active and visited pseudo classes to navbar work-links.

--- a/styles.css
+++ b/styles.css
@@ -45,8 +45,15 @@ body {
 .navbar .work-link {
     pointer-events: auto;
 }
+.navbar .work-link:visited {
+    color: #e5e7eb;
+}
 .navbar .work-link:hover {
     color: #5a77a0;
+}
+.navbar .work-link:active {
+    color: #3882f6;
+    transition: color 0.2s;
 }
 .navbar ul {
     display: flex;
@@ -108,6 +115,9 @@ body {
     html, body {
         overflow-x: hidden;
         overflow-y: scroll;
+    }
+    body {
+        -ms-overflow-style: none; /* For IE and Edge */
     }
     body::-webkit-scrollbar {
         display: none; /* For Chrome, Safari, and Opera */
